--- a/games/Gladdihoppers/index.html
+++ b/games/Gladdihoppers/index.html
@@ -1,78 +1,61 @@
-<!-- Safe Gladihoppers Loader (working + no redirects) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Gladihoppers (Secure Loader)</title>
+  <title>Gladihoppers (Safe Loader)</title>
 
-  <!-- Relaxed but safe CSP for Unity -->
+  <!-- Allow Unity scripts but block navigation and unknown sources -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self' https://cdn.jsdelivr.net;
     script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;
     connect-src 'self' https://cdn.jsdelivr.net;
     img-src 'self' https://cdn.jsdelivr.net data:;
     style-src 'self' 'unsafe-inline';
-    frame-ancestors 'none';
+    navigate-to 'none';
   ">
 
   <style>
     html, body {
       margin: 0;
-      padding: 0;
       height: 100%;
       background: #000;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
+      overflow: hidden;
     }
   </style>
 </head>
-<body>
-  <iframe
-    sandbox="allow-scripts allow-same-origin"
-    srcdoc="
-      <!DOCTYPE html>
-      <html>
-      <head>
-        <meta charset='utf-8'>
-        <title>Gladihoppers</title>
-        <script>
-          // Prevent redirects or tab openings
-          window.open = () => null;
-          window.location.assign = () => null;
-          window.location.replace = () => null;
-          window.addEventListener('beforeunload', e => e.preventDefault());
-          const origSet = window.location.href;
-          Object.defineProperty(window, 'location', { configurable:false, writable:false, value:window.location });
 
-          // Game config
-          window.config = {
-            loader: 'unity',
-            debug: false,
-            maxRatio: 16 / 9,
-            minRatio: 9 / 16,
-            title: 'Gladihoppers',
-            thumbnail: 'https://cdn.jsdelivr.net/gh/genizy/gh/patch/png/null.png',
-            numScreenshots: 5,
-            unityVersion: '2019.3.13f1',
-            unityWebglBuildUrl: 'https://cdn.jsdelivr.net/gh/genizy/gh/Build/Gladihoppers.json',
-            fileSize: 23,
-            cachedDecompressedFileSizes: {
-              'Gladihoppers.data.unityweb': 17409938,
-              'Gladihoppers.wasm.code.unityweb': 6410659,
-              'Gladihoppers.wasm.framework.unityweb': 91463
-            }
-          };
-        </script>
-      </head>
-      <body style='margin:0;background:#000;'>
-        <script src='https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js'></script>
-      </body>
-      </html>
-    ">
-  </iframe>
+<body>
+  <script>
+    // 🔒 Anti-redirect and popup protection
+    window.open = () => null;
+    window.location.assign = () => null;
+    window.location.replace = () => null;
+    window.onbeforeunload = null;
+    window.addEventListener('beforeunload', e => e.preventDefault());
+  </script>
+
+  <!-- Game configuration -->
+  <script>
+    window.config = {
+      loader: 'unity',
+      debug: false,
+      maxRatio: 16 / 9,
+      minRatio: 9 / 16,
+      title: 'Gladihoppers',
+      thumbnail: 'https://cdn.jsdelivr.net/gh/genizy/gh/patch/png/null.png',
+      numScreenshots: 5,
+      unityVersion: '2019.3.13f1',
+      unityWebglBuildUrl: 'https://cdn.jsdelivr.net/gh/genizy/gh/Build/Gladihoppers.json',
+      fileSize: 23,
+      cachedDecompressedFileSizes: {
+        'Gladihoppers.data.unityweb': 17409938,
+        'Gladihoppers.wasm.code.unityweb': 6410659,
+        'Gladihoppers.wasm.framework.unityweb': 91463
+      }
+    };
+  </script>
+
+  <!-- Unity loader -->
+  <script src="https://cdn.jsdelivr.net/gh/genizy/gh/patch/js/poki-master-loader.js"></script>
 </body>
 </html>
