--- a/games/Dreader/index.html
+++ b/games/Dreader/index.html
@@ -1,88 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Ultimate Game Stash</title>
-
 <style>
   html, body {
     margin: 0;
     padding: 0;
-    overflow: hidden; /* 🔥 removes scrollbars */
-    width: 100%;
+    overflow: hidden; /* hides scrollbars */
     height: 100%;
-    background: black;
-    cursor: none; /* hides cursor */
+    width: 100%;
+    background: black; /* optional */
   }
 
   canvas {
     display: block;
-    width: 100vw;  /* fills full width */
-    height: 100vh; /* fills full height */
-    object-fit: contain; /* keeps aspect ratio */
-  }
-
-  #button {
-    display: none;
-  }
-
-  .imgb_vis {
-    animation: imgb-animation 7s linear;
-  }
-
-  @keyframes imgb-animation {
-    10% { transform: translateX(0); }
-    20% { transform: translateX(100px); }
-    90% { transform: translateX(100px); }
-    100% { transform: translateX(0); }
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    transform-origin: top left;
   }
 </style>
-</head>
-
-<body>
-<script type="module">
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/computer.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/director.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/maze.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/monster.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/player.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/transition.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/world.class.js';
-  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/core/client.class.js';
-</script>
-
-<canvas id="gameCanvas" width="679" height="465">Canvas is not supported</canvas>
-
-<div class="loading" style="visibility: hidden;"></div>
-<a alt="show credits" class="show-credits" style="visibility: visible;"></a>
-<div class="credits">
-  <h3><a href="https://donitz.itch.io/" target="_blank"></a></h3>
-</div>
 
 <script>
-  // 🔥 Dynamically resize the canvas to fit window
-  const canvas = document.getElementById('gameCanvas');
-  const ctx = canvas.getContext('2d');
+  const canvas = document.querySelector("canvas");
 
   function resizeCanvas() {
-    const aspect = 679 / 465;
-    let width = window.innerWidth;
-    let height = window.innerHeight;
+    const gameWidth = 679;
+    const gameHeight = 465;
 
-    if (width / height > aspect) {
-      width = height * aspect;
-    } else {
-      height = width / aspect;
-    }
+    const scaleX = window.innerWidth / gameWidth;
+    const scaleY = window.innerHeight / gameHeight;
+    const scale = Math.min(scaleX, scaleY); // maintain aspect ratio
 
-    canvas.style.width = width + 'px';
-    canvas.style.height = height + 'px';
+    canvas.style.transform = `scale(${scale})`;
+
+    // Center the scaled canvas
+    const newWidth = gameWidth * scale;
+    const newHeight = gameHeight * scale;
+    canvas.style.left = `${(window.innerWidth - newWidth) / 2}px`;
+    canvas.style.top = `${(window.innerHeight - newHeight) / 2}px`;
   }
 
-  window.addEventListener('resize', resizeCanvas);
-  resizeCanvas();
+  window.addEventListener("resize", resizeCanvas);
+  window.addEventListener("load", resizeCanvas);
 </script>
-
-</body>
-</html>
