--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,206 +1,38 @@
+<!-- Ultimate Game Stash file--> 
+<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!-- Made by genizy --> 
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Five Nights at Freddy's 3</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      overflow: hidden;
-      user-select: none;
-      background: #000; /* Black background */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-family: monospace;
-    }
-
-    /* Loader */
-    .selection {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-    }
-
-    .loader {
-      position: absolute;
-      bottom: 12vh;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      width: 85vw;
-      max-width: 900px;
-    }
-
-    .loader h1 {
-      margin: 0;
-      font-size: 5vw;
-      max-font-size: 72px;
-    }
-    .loader hr {
-      margin: 1vh auto 0;
-      border: white solid 0.2vw;
-      width: 0%;
-      transition: width 0.2s ease;
-    }
-    .loader h2 {
-      margin: 1vh 0;
-      font-size: 1.6vw;
-    }
-
-    /* Canvas */
-    canvas {
-      display: none;
-      width: 90vw;
-      height: 65vh;
-      max-width: 1200px;
-      max-height: 800px;
-      border: 1px solid #444;
-      background: #000;
-    }
-
-    /* Optional subtle vignette purely via CSS (no image) */
-    .vignette {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      box-shadow: inset 0 0 200px 80px rgba(0,0,0,0.85);
-    }
-
-    /* Disable text selection for key elements */
-    .loader, canvas {
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-  </style>
+	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="HandheldFriendly" content="true" />
+    <title>Five Nights at Freddy's 3</title>
 </head>
+
 <body>
-  <canvas id="MMFCanvas" width="1024" height="768">
-    Your browser does not support Canvas. Please try a modern browser.
-  </canvas>
-
-  <div class="selection" id="selection">
-    <div class="loader">
-      <h1 id="percentage">0%</h1>
-      <hr id="bar">
-      <h2 id="stage">STARTING UP...</h2>
+    <div style="display: inline-block; -webkit-user-select: none; text-align: left">
+        <canvas id="MMFCanvas" width="1280" height="720"> Your browser does not support Canvas, Please try again. </canvas>
     </div>
-  </div>
-
-  <div class="vignette" aria-hidden="true"></div>
-
-  <script>
-    // Prevent touch scrolling
-    function preventMotion(event) {
-      window.scrollTo(0, 0);
-      event.preventDefault();
-      event.stopPropagation();
-    }
-    window.addEventListener("scroll", preventMotion, { passive: false });
-    window.addEventListener("touchmove", preventMotion, { passive: false });
-
-    // Fullscreen shortcut: press "-" and "=" together
-    const pressedKeys = {};
-    document.addEventListener("keydown", (event) => {
-      pressedKeys[event.key] = true;
-      if (pressedKeys["-"] && pressedKeys["="]) {
-        const c = document.querySelector("canvas");
-        if (c && c.requestFullscreen) c.requestFullscreen();
-        delete pressedKeys[event.key];
-      }
-    });
-    document.addEventListener("keyup", (event) => {
-      delete pressedKeys[event.key];
-    });
-
-    // Self-contained progress + simple canvas message (no external files)
-    const gametitle = document.title;
-    const percentageEl = document.getElementById("percentage");
-    const barEl = document.getElementById("bar");
-    const stageEl = document.getElementById("stage");
-    const canvas = document.getElementById("MMFCanvas");
-    const selection = document.getElementById("selection");
-
-    function updateProgress(text, percent) {
-      document.title = percent + "% " + gametitle;
-      percentageEl.textContent = percent + "%";
-      barEl.style.width = percent + "%";
-      stageEl.textContent = text;
-    }
-
-    // Fake staged loader to mimic original feel
-    const steps = [
-      { text: "RETURNING GEARS...", duration: 900 },
-      { text: "BOOTING UP ARCHIVE...", duration: 1200 },
-      { text: "INITIALIZING RUNTIME...", duration: 800 },
-      { text: "FINALIZING...", duration: 500 }
-    ];
-
-    async function runLoader() {
-      let progress = 0;
-      for (const step of steps) {
-        const start = progress;
-        const end = Math.min(100, start + 25);
-        const frames = Math.ceil(step.duration / 50);
-        for (let i = 1; i <= frames; i++) {
-          progress = Math.min(100, Math.floor(start + (i / frames) * (end - start)));
-          updateProgress(step.text, progress);
-          await new Promise(r => setTimeout(r, 50));
-        }
-      }
-      // Done: show canvas, hide loader
-      selection.style.display = "none";
-      canvas.style.display = "block";
-      document.title = gametitle;
-      drawIntro();
-    }
-
-    // Minimal self-contained "runtime": draw a message and pulse
-    function drawIntro() {
-      const ctx = canvas.getContext("2d");
-      let t = 0;
-      function frame() {
-        const w = canvas.width, h = canvas.height;
-        ctx.clearRect(0, 0, w, h);
-
-        // Background gradient pulse (still black dominant)
-        const g = ctx.createRadialGradient(w/2, h/2, 0, w/2, h/2, Math.max(w, h)/2);
-        const alpha = 0.08 + 0.06 * Math.sin(t / 20);
-        g.addColorStop(0, "rgba(0,0,0,1)");
-        g.addColorStop(1, "rgba(32,32,32," + alpha + ")");
-        ctx.fillStyle = g;
-        ctx.fillRect(0, 0, w, h);
-
-        // Title text
-        ctx.fillStyle = "#10ff80";
-        ctx.font = "bold 48px monospace";
-        ctx.textAlign = "center";
-        ctx.fillText("Five Nights at Freddy's 3", w/2, h/2 - 20);
-
-        // Subtext
-        ctx.fillStyle = "#ffffff";
-        ctx.font = "20px monospace";
-        ctx.fillText("Standalone demo canvas — no external files required.", w/2, h/2 + 20);
-
-        // Hint
-        ctx.fillStyle = "#bbbbbb";
-        ctx.font = "16px monospace";
-        ctx.fillText('Press "-" and "=" together to toggle fullscreen.', w/2, h - 40);
-
-        t++;
-        requestAnimationFrame(frame);
-      }
-      requestAnimationFrame(frame);
-    }
-
-    runLoader();
-  </script>
+    <div id="progress-container">
+        <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
+        </div>
+        <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
